fix(arc-238): restyle back to top button on mobile

--- a/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
+++ b/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
@@ -48,13 +48,24 @@ $component: "c-pagination-bar";
 		@include c-pagination-bar-two-item-justify;
 	}
 
-	&__back-to-top {
-		display: none !important; // Override button styles
+	&__back-to-top-wrapper {
+		width: 100%;
+		display: flex;
+		justify-content: flex-end;
+		grid-row-start: 1;
+		grid-column: 1 / 3;
+		justify-self: right;
+		margin-right: -$button-horizontal-whitespace;
+		border-bottom: $divider-grey;
 	}
 
 	&--back-to-top {
 		@include respond-to("md") {
 			@include c-pagination-bar-two-item-justify;
+
+			.#{$component}__back-to-top {
+				margin-right: -$button-horizontal-whitespace;
+			}
 		}
 
 		@include respond-at("md") {
@@ -62,9 +73,10 @@ $component: "c-pagination-bar";
 		}
 
 		.#{$component} {
-			&__back-to-top {
+			&__back-to-top-wrapper {
 				@include respond-at("md") {
-					display: initial !important; // Override button styles
+					grid-column: 3 / 4;
+					border-bottom: none;
 				}
 			}
 		}
